--- a/.github/workflows/workflow-prd.yml
+++ b/.github/workflows/workflow-prd.yml
@@ -1,4 +1,4 @@
-name: Deploy - Pypi - Repository
+name: Workflow - PRD
 
 on:
   push:
@@ -16,5 +16,8 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Main Step
-        uses: ./.github/actions/main
+      - name: Deploy Infrastructure
+        uses: ./.github/actions/iac
+
+      - name: Publish PYPI
+        uses: ./.github/actions/module-pypi/publish
