--- a/.github/actions/iac/action.yml
+++ b/.github/actions/iac/action.yml
@@ -1,6 +1,15 @@
 name: 'Apply Terraform'
 description: 'Apply Terraform Using Google OIDC'
 inputs:
+  cosmos_name:
+    description: 'Cosmos Name'
+    required: true
+  realm_name:
+    description: 'Realm name'
+    required: true
+  app_name:
+    description: 'Application name'
+    required: true
   env_name:
     description: 'Environment Name'
     required: true
@@ -32,4 +41,7 @@ runs:
 
     - name: Terraform Init
       shell: bash
-      run: terraform -chdir=iac/environments/${{ inputs.env_name }} init -backend-config="bucket=${{ inputs.tf_bucket_name }}"
+      run: |
+        terraform -chdir=iac/environments/${{ inputs.env_name }} init \
+          -backend-config="bucket=${{ inputs.tf_bucket_name }}" \
+          -backend-config="prefix=${{ inputs.realm_name }}/${{ inputs.foundation_name }}/${{ inputs.app_name }}/${{ inputs.env_name }}/terraform/state"
