feat: changing state file configuration

--- a/.github/workflows/workflow-dev.yml
+++ b/.github/workflows/workflow-dev.yml
@@ -19,6 +19,9 @@ jobs:
       - name: Deploy Infrastructure
         uses: ./.github/actions/iac
         with:
+          cosmos_name: ${{ vars.COSMOS_NAME }}
+          realm_name: ${{ vars.REALM_NAME }}
+          app_name: ${{ vars.APP_NAME }}
           env_name: ${{ vars.ENV_NAME }}
           project_id: ${{ vars.PROJECT_ID }}
           workload_identity_provider: ${{ vars.SECRET_WIP_NAME }}
