feat: changing state file configuration

--- a/.github/actions/iac/action.yml
+++ b/.github/actions/iac/action.yml
@@ -44,4 +44,4 @@ runs:
       run: |
         terraform -chdir=iac/environments/${{ inputs.env_name }} init \
           -backend-config="bucket=${{ inputs.tf_bucket_name }}" \
-          -backend-config="prefix=${{ inputs.realm_name }}/${{ inputs.foundation_name }}/${{ inputs.app_name }}/${{ inputs.env_name }}/terraform/state"
+          -backend-config="prefix=${{ inputs.realm_name }}/_/${{ inputs.foundation_name }}/${{ inputs.app_name }}/${{ inputs.env_name }}/terraform/state"
