--- a/.github/workflows/workflow-prd.yml
+++ b/.github/workflows/workflow-prd.yml
@@ -9,15 +9,24 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     environment: prd
-    permissions:
-      contents: read
-      id-token: write
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Deploy Infrastructure
-        uses: ./.github/actions/iac
+      - name: Install Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.10'
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install setuptools wheel twine
+
+      - name: Build Python package
+        run: |
+          python setup.py sdist bdist_wheel
+          CHECK_VERSION=$(ls dist/*-${GITHUB_REF#refs/tags/}*.tar.gz)
 
       - name: Publish PYPI
         uses: ./.github/actions/module-pypi/publish
