--- a/.github/workflows/workflow-prd.yml
+++ b/.github/workflows/workflow-prd.yml
@@ -16,20 +16,5 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Install Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.10'
-
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install setuptools wheel twine
-
-      - name: Build Python package
-        run: |
-          python setup.py sdist bdist_wheel
-          CHECK_VERSION=$(ls dist/*-${GITHUB_REF#refs/tags/}*.tar.gz)
-
-      - name: Publish release distributions to PyPI
-        uses: pypa/gh-action-pypi-publish@release/v1
+      - name: Publish PYPI
+        uses: ./.github/actions/module-pypi/publish-pypi
